--- a/shippable.yml
+++ b/shippable.yml
@@ -183,7 +183,7 @@ integrations:
   notifications:
     - integrationName: email
       type: email
-      on_success: never
+      on_success: always
       on_failure: never
       on_start: never
       on_pull_request: never
@@ -199,7 +199,7 @@ integrations:
       type: slack
       recipients:
       - "#shippable"
-      on_success: change
+      on_success: always
       on_failure: always
       on_start: never
       on_pull_request: never
